	conflicting local names in the method definition.

    o	qgamma() and qchisq() could be inaccurate for small p,
    	e.g. qgamma(1.2e-10, shape = 19) was 2.52 rather than 2.73.

    o	coerce() is now a proper S4 object and so prints correctly.

    o	@ now checks it is being applied to an S4 object, and if not
    	gives a warning (which will become an error in 2.8.0).




	**************************************************
	*						 *
	*	       2.6 SERIES NEWS			 *
	*						 *
	**************************************************



		CHANGES IN R VERSION 2.6.2 patched


BUG FIXES

    o	src/extra/pcre has been updated to PCRE 7.6 (bugfix release).

    o	unlink(..., recursive=TRUE) no longer crashes on some platforms
	if a directory cannot be opened.

    o	Loading in 2.6.2 a saved workspace could give an unimportant
	warning in a non-UTF-8 multibyte locale (in particular a CJK
	locale on Windows) which is now suppressed.

    o	print() methods are more consistent in returning the original
	argument invisibly.

    o	Using the X11 data editor (e.g. via edit(), fix() or View())
	could crash if the 'End' key was used and all the columns
	would have fitted into the window.

    o	Creating a new page on an X11() device (by plot.new() or
	grid.newpage()) did not flush out the XClearWindow call, so
	the X11 window might not be refreshed immediately.

    o	libtool has been updated to version 1.5.26, which avoids
	many spurious configure warnings on Darwin/Mac OS X.

    o	l10n_info() now recognizes how Darwin/Mac OS X reports
	Latin-1 locales (as charset ISO8859-1 rather than ISO-8859-1).

    o	Checking examples which used grid (e.g. via lattice) without
	attaching grid no longer give errors from grid_plot_hook().

    o	kappa(m, exact=TRUE) no longer wrongly uses 'exact=FALSE' when m
	is an 'lm' or 'qr' object because the kappa.tri(x, exact=TRUE)
	now works correctly.

    o	help(topic, offline=TRUE) misbehaved when there were multiple
	matches to 'topic'.  (PR#10859)
