@@ -127,6 +127,7 @@ typedef struct {
     int longstring;
     int maxlines;
     Rboolean active;
+    int isS4;
 } LocalParseData;
 
 static SEXP deparse1WithCutoff(SEXP call, Rboolean abbrev, int cutoff,
@@ -197,7 +198,7 @@ static SEXP deparse1WithCutoff(SEXP call, Rboolean abbrev, int cutoff,
 	    {0, 0, 0, 0, /*startline = */TRUE, 0,
 	     NULL,
 	     /*DeparseBuffer=*/{NULL, 0, BUFSIZE},
-	     DEFAULT_Cutoff, FALSE, 0, TRUE, FALSE, INT_MAX, TRUE};
+	     DEFAULT_Cutoff, FALSE, 0, TRUE, FALSE, INT_MAX, TRUE, 0};
     localData.cutoff = cutoff;
     localData.backtick = backtick;
     localData.opts = opts;
@@ -231,7 +232,9 @@ static SEXP deparse1WithCutoff(SEXP call, Rboolean abbrev, int cutoff,
 	SET_STRING_ELT(svec, R_BrowseLines, mkChar("  ..."));
     }
     R_print.digits = savedigits;
-    if ((opts & WARNINCOMPLETE) && !localData.sourceable)
+    if ((opts & WARNINCOMPLETE) && localData.isS4)
+    	warning(_("deparse of an S4 object will not be source()able"));
+    else if ((opts & WARNINCOMPLETE) && !localData.sourceable)
     	warning(_("deparse may be incomplete"));
     if ((opts & WARNINCOMPLETE) && localData.longstring)
     	warning(_("deparse may be not be source()able in R < 2.7.0"));
@@ -631,6 +634,8 @@ static void deparse2buff(SEXP s, LocalParseData *d)
     int localOpts = d->opts, i, n;
 
     if (!d->active) return;
+
+    if (IS_S4_OBJECT(s)) d->isS4 = TRUE;
 
     switch (TYPEOF(s)) {
     case NILSXP:
@@ -1102,6 +1107,7 @@ static void deparse2buff(SEXP s, LocalParseData *d)
 	break;
     case S4SXP:
 	d->sourceable = FALSE;
+	d->isS4 = TRUE;
 	print2buff("<S4 object of class ", d);
 	deparse2buff(getAttrib(s, R_ClassSymbol), d);
 	print2buff(">", d);
